# saber

./: .gitignore  README.md  pyproject.toml
configs/: mdr_14plex.yaml
data/references/: README.md
data/who_catalogue/: README.md
notebooks/: README.md
saber/: __init__.py
saber/candidates/: __init__.py  filters.py  mismatch.py  scanner.py  synthetic_mismatch.py
saber/core/: __init__.py  config.py  constants.py  types.py
saber/multiplex/: __init__.py  optimizer.py
saber/offtarget/: __init__.py  screener.py
saber/pipeline/: __init__.py  cli.py  runner.py
saber/primers/: __init__.py  rpa_designer.py
saber/scoring/: __init__.py  base.py  heuristic.py  jepa.py  sequence_ml.py
saber/targets/: __init__.py  resolver.py  who_parser.py
saber/validation/: __init__.py  tracker.py
saber/viz/: __init__.py  active_learning.py  benchmark.py  discrimination.py  multiplex.py  ranking.py  style.py  target_overview.py
scripts/: design_core_panel.py  run_full_pipeline.py  saber_pub_figures.py  test_enhancement.py
tests/: conftest.py
tests/unit/: test_core.py  test_scoring.py
